k8/c1-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml.k8-config convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: c1
  name: c1
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml.k8-config convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: c1
    spec:
      containers:
      - env:
        - name: COMMAND
          value: wikipedia
        - name: GRAPH_DB_ENDPOINT
          value: http://graph:5000
        - name: MAX_APPROX_NODES
          value: "100"
        - name: METRICS_PORT
          value: "8001"
        - name: MS_DELAY
          value: "5"
        - name: PARALLELISM
          value: "16"
        - name: TWO_WAY_KV_ENDPOINT
          value: http://kv:5001
        image: dgoldstein1/crawler:1.0.0
        name: c1
        resources: {}
      restartPolicy: Always
status: {}
