k8/grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: grafana
    spec:
      containers:
      - env:
        - name: GF_SERVER_ROOT_URL
          value: '%(protocol)s://%(domain)s:/admin/grafana'
        - name: GF_SERVER_SERVE_FROM_SUB_PATH
          value: "true"
        image: grafana/grafana:6.3.6
        name: grafana
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /etc/grafana/provisioning/
          name: grafana-claim0
      restartPolicy: Always
      volumes:
      - name: grafana-claim0
        persistentVolumeClaim:
          claimName: grafana-claim0
status: {}
