k8/graph-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml.k8-config convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: graph
  name: graph
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml.k8-config convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: graph
    spec:
      containers:
      - image: dgoldstein1/biggraph:0.1.5
        name: graph
        ports:
        - containerPort: 5000
        - containerPort: 8001
        resources: {}
        volumeMounts:
        - mountPath: /data/current_graph.graph
          name: graph-claim0
      restartPolicy: Always
      volumes:
      - name: graph-claim0
        persistentVolumeClaim:
          claimName: graph-claim0
status: {}
