k8/links-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml.k8-config convert
    kompose.image-pull-policy: Always
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: links
  name: links
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml.k8-config convert
        kompose.image-pull-policy: Always
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: links
    spec:
      containers:
      - image: dgoldstein1/links:1.0.0
        imagePullPolicy: Always
        name: links
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
