k8/analytics-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml.k8-config convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: analytics-server
  name: analytics-server
spec:
  ports:
  - name: "5002"
    port: 5002
    targetPort: 5000
  selector:
    io.kompose.service: analytics-server
status:
  loadBalancer: {}
