k8/biggraph.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: graph
  name: graph
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 5000
      name : "main"
    - port: 8001
      name : "metrics"
  selector:
    app: graph
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph
spec:
  selector:
    matchLabels:
      app: graph
  replicas: 1
  template:
    metadata:
      labels:
        app: graph
    spec:
      containers:
      - name: graph
        image: dgoldstein1/biggraph:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        - containerPort: 8001
        volumeMounts:
          - name: graph-data
            mountPath: /usr/graphApi/current_graph_data
      volumes:
        - name : graph-data
          emptyDir : {}
