k8/crawler.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crawler
  name: crawler
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8001
  selector:
    app: crawler
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
spec:
  selector:
    matchLabels:
      app: crawler
  replicas: 1
  template:
    metadata:
      labels:
        app: crawler
    spec:
      containers:
      - name: crawler
        image: dgoldstein1/crawler:0.2.6
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
