k8/edge-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: edge
  name: edge
spec:
  ports:
  - name: "8443"
    port: 8443
    targetPort: 80
  selector:
    io.kompose.service: edge
status:
  loadBalancer: {}
