k8/graph-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: graph
  name: graph
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    io.kompose.service: graph
status:
  loadBalancer: {}
