k8/kv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kv
  name: kv
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 5001
  selector:
    app: kv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kv
spec:
  selector:
    matchLabels:
      app: kv
  replicas: 1
  template:
    metadata:
      labels:
        app: kv
    spec:
      containers:
      - name: kv
        image: dgoldstein1/twowaykv:0.2.2
        ports:
        - containerPort: 5001
