k8/prom.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prom
  name: prom
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 9090
  selector:
    app: prom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom
spec:
  selector:
    matchLabels:
      app: prom
  replicas: 1
  template:
    metadata:
      labels:
        app: prom
    spec:
      containers:
        - name: prom
          image: dgoldstein1/crawler-deployment:prometheus-0.2.3
          args:
            - "--log.level=debug"
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/data/prom"
          ports:
            - containerPort: 9090
          volumeMounts:
          - name: prom-data
            mountPath: /data/prom
      volumes:
      - name: prom-data
        emptyDir: {}
