k8/edge-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: edge
  name: edge
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: edge
          servicePort: 8443
status:
  loadBalancer: {}
